Completed Equals Button Function: seperateTerms(), infixToPostFix(), computePostFix()

--- a/app/src/main/res/layout/fragment_interface.xml
+++ b/app/src/main/res/layout/fragment_interface.xml
@@ -235,6 +235,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/buttonEqual_text"
+            android:onClick="@{() -> viewmodel.onPushButtonEquals()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
