--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="calculator_button">
-        <item name="android:layout_width">@dimen/numBtn_width</item>
-        <item name="android:layout_height">@dimen/numBtn_height</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:background">@color/obsidian_200</item>
+
+
+
+
         <item name="android:textSize">@dimen/button_textSize</item>
     </style>
 </resources>
