Overhauled UI, colored text still needs some tweaking. Added more textviews to implement more complicated display.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,8 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_margin">1dp</item>
-        <item name="android:background">@color/obsidian_200</item>
-
-
-
-
+        <item name="android:backgroundTint">@null</item>
+        <item name="android:background">@color/Grey_100</item>
         <item name="android:textSize">@dimen/button_textSize</item>
     </style>
 </resources>
