--- a/app/src/main/res/layout/fragment_interface.xml
+++ b/app/src/main/res/layout/fragment_interface.xml
@@ -5,11 +5,9 @@
     android:background="@color/obsidian_100">
 
     <data>
-
         <variable
             name="viewmodel"
             type="kevin.jo.ramos.MainViewModel" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,65 +15,101 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-
         <TextView
-            android:id="@+id/display_text"
+            android:id="@+id/past_operations_text"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/obsidian_100"
+            android:text="0"
+            android:textAlignment="textEnd"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/operation_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/operation_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/obsidian_100"
             android:text="@{viewmodel.currentExpression.toString()}"
             android:textAlignment="textEnd"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="50sp"
+            app:layout_constraintBottom_toTopOf="@id/answer_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/past_operations_text" />
+
+        <TextView
+            android:id="@+id/answer_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/obsidian_100"
+            android:text=""
+            android:textAlignment="textEnd"
+            android:textColor="@color/white"
+            android:textSize="32sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="16dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/operation_text" />
 
         <Button
             android:id="@+id/button_0"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButton0()}"
             android:text="@string/button0_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_point"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_blank"
-            app:layout_constraintTop_toBottomOf="@+id/button_2" />
+            app:layout_constraintTop_toBottomOf="@+id/button_2"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_1"
             style="@style/calculator_button"
-
             android:layout_marginStart="1dp"
             android:onClick="@{() -> viewmodel.onPushButton1()}"
             android:text="@string/button1_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_blank"
             app:layout_constraintEnd_toStartOf="@+id/button_2"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_4" />
+            app:layout_constraintTop_toBottomOf="@+id/button_4"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_2"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButton2()}"
             android:text="@string/button2_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_0"
             app:layout_constraintEnd_toStartOf="@+id/button_3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_1"
-            app:layout_constraintTop_toBottomOf="@+id/button_5" />
+            app:layout_constraintTop_toBottomOf="@+id/button_5"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_3"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButton3()}"
             android:text="@string/button3_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_point"
             app:layout_constraintEnd_toStartOf="@+id/button_add"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_2"
-            app:layout_constraintTop_toBottomOf="@+id/button_6" />
+            app:layout_constraintTop_toBottomOf="@+id/button_6"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_4"
@@ -83,33 +117,39 @@
             android:layout_marginStart="1dp"
             android:onClick="@{() -> viewmodel.onPushButton4()}"
             android:text="@string/button4_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_1"
             app:layout_constraintEnd_toStartOf="@+id/button_5"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_7" />
+            app:layout_constraintTop_toBottomOf="@+id/button_7"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_5"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButton5()}"
             android:text="@string/button5_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_2"
             app:layout_constraintEnd_toStartOf="@+id/button_6"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_4"
-            app:layout_constraintTop_toBottomOf="@+id/button_8" />
+            app:layout_constraintTop_toBottomOf="@+id/button_8"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_6"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButton6()}"
             android:text="@string/button6_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_3"
             app:layout_constraintEnd_toStartOf="@+id/button_subtract"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_5"
-            app:layout_constraintTop_toBottomOf="@+id/button_9" />
+            app:layout_constraintTop_toBottomOf="@+id/button_9"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_7"
@@ -119,33 +159,39 @@
             android:layout_marginStart="1dp"
             android:onClick="@{() -> viewmodel.onPushButton7()}"
             android:text="@string/button7_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_4"
             app:layout_constraintEnd_toStartOf="@+id/button_8"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_clear" />
+            app:layout_constraintTop_toBottomOf="@+id/button_clear"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_8"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButton8()}"
             android:text="@string/button8_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_5"
             app:layout_constraintEnd_toStartOf="@+id/button_9"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_7"
-            app:layout_constraintTop_toBottomOf="@+id/button_delete" />
+            app:layout_constraintTop_toBottomOf="@+id/button_delete"
+            android:textColor="@color/purple_100" />
 
         <Button
             android:id="@+id/button_9"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButton9()}"
             android:text="@string/button9_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_6"
             app:layout_constraintEnd_toStartOf="@+id/button_multiply"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_8"
-            app:layout_constraintTop_toBottomOf="@+id/button_percent" />
+            app:layout_constraintTop_toBottomOf="@+id/button_percent"
+            android:textColor="@color/purple_100"/>
 
         <Button
             android:id="@+id/button_clear"
@@ -153,13 +199,15 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="1dp"
+            android:background="@color/Grey_200"
             android:onClick="@{() -> viewmodel.onPushButtonClear()}"
             android:text="@string/buttonClear_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_7"
             app:layout_constraintEnd_toStartOf="@+id/button_delete"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/display_text"
+            app:layout_constraintTop_toBottomOf="@id/guideline2"
             app:layout_constraintVertical_chainStyle="spread" />
 
         <Button
@@ -167,20 +215,23 @@
             style="@style/calculator_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/Grey_200"
             android:onClick="@{() -> viewmodel.onPushButtonDelete()}"
             android:text="@string/buttonDelete_text"
             android:textSize="15sp"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_8"
             app:layout_constraintEnd_toStartOf="@+id/button_percent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_clear"
-            app:layout_constraintTop_toBottomOf="@+id/display_text" />
+            app:layout_constraintTop_toBottomOf="@id/guideline2" />
 
         <Button
             android:id="@+id/button_point"
             style="@style/calculator_button"
             android:onClick="@{() -> viewmodel.onPushButtonPeriod()}"
             android:text="@string/buttonPoint_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_equal"
             app:layout_constraintHorizontal_bias="0.5"
@@ -191,8 +242,10 @@
             android:id="@+id/button_add"
             style="@style/calculator_button"
             android:layout_marginEnd="1dp"
+            android:background="@color/Grey_200"
             android:onClick="@{() -> viewmodel.onPushButtonAdd()}"
             android:text="@string/buttonAdd_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_equal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -203,8 +256,10 @@
             android:id="@+id/button_subtract"
             style="@style/calculator_button"
             android:layout_marginEnd="1dp"
+            android:background="@color/Grey_200"
             android:onClick="@{() -> viewmodel.onPushButtonSubtract()}"
             android:text="@string/buttonSubtract_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -216,8 +271,10 @@
             style="@style/calculator_button"
             android:layout_width="0dp"
             android:layout_marginEnd="1dp"
+            android:background="@color/Grey_200"
             android:onClick="@{() -> viewmodel.onPushButtonMultiply()}"
             android:text="@string/buttonMultiply_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_subtract"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -230,34 +287,40 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="1dp"
+            android:background="@color/Grey_200"
             android:onClick="@{() -> viewmodel.onPushButtonDivide()}"
             android:text="@string/buttonDivide_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_multiply"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_percent"
-            app:layout_constraintTop_toBottomOf="@+id/display_text" />
+            app:layout_constraintTop_toBottomOf="@id/guideline2" />
 
         <Button
             android:id="@+id/button_percent"
             style="@style/calculator_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/Grey_200"
             android:onClick="@{() -> viewmodel.onPushButtonPercent()}"
             android:text="@string/buttonPercent_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_9"
             app:layout_constraintEnd_toStartOf="@+id/button_division"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/button_delete"
-            app:layout_constraintTop_toBottomOf="@+id/display_text" />
+            app:layout_constraintTop_toBottomOf="@id/guideline2" />
 
         <Button
             android:id="@+id/button_equal"
             style="@style/calculator_button"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="1dp"
+            android:background="@color/purple_100"
             android:onClick="@{() -> viewmodel.onPushButtonEquals()}"
             android:text="@string/buttonEqual_text"
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -269,6 +332,7 @@
             style="@style/calculator_button"
             android:layout_marginStart="1dp"
             android:text=""
+            app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_0"
             app:layout_constraintHorizontal_bias="0.5"
@@ -280,7 +344,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent=".45" />
+            app:layout_constraintGuide_percent=".5" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
