--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
     <color name="obsidian_100">#1a1a1a</color>
     <color name="obsidian_200">#333</color>
+    <color name="Grey_100">#272727</color>
+    <color name="Grey_200">#202020</color>
     <color name="purple_200">#FF3700BF</color>
-    <color name="purple_100">#483699</color>
+    <color name="purple_100">#FF483699</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
 </resources>
