Implemented display Logic, its implementation is messy with tight cupling though. I'll need to clean up my code in order to fix this. Code is stable, and screen now shows past operations.

--- a/app/src/main/res/layout/fragment_interface.xml
+++ b/app/src/main/res/layout/fragment_interface.xml
@@ -25,7 +25,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="@{viewmodel.currentHistoryString.toString()}"
-            android:textColor="@color/white"
+            android:textColor="@color/seclusive_white"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/operation_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,9 +55,9 @@
             android:background="@color/obsidian_100"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:text="@{'=' + viewmodel.currentAnswerString.toString()}"
+            android:text="@{viewmodel.currentAnswerString.toString()}"
             android:textAlignment="textEnd"
-            android:textColor="@color/white"
+            android:textColor="@color/shy_white"
             android:textSize="32sp"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
@@ -68,7 +68,6 @@
         <Button
             android:id="@+id/button_0"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButton0()}"
             android:text="@string/button0_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -82,7 +81,6 @@
             android:id="@+id/button_1"
             style="@style/calculator_button"
             android:layout_marginStart="1dp"
-            android:onClick="@{() -> viewmodel.onPushButton1()}"
             android:text="@string/button1_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -95,7 +93,6 @@
         <Button
             android:id="@+id/button_2"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButton2()}"
             android:text="@string/button2_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -108,7 +105,6 @@
         <Button
             android:id="@+id/button_3"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButton3()}"
             android:text="@string/button3_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -122,7 +118,6 @@
             android:id="@+id/button_4"
             style="@style/calculator_button"
             android:layout_marginStart="1dp"
-            android:onClick="@{() -> viewmodel.onPushButton4()}"
             android:text="@string/button4_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -135,7 +130,6 @@
         <Button
             android:id="@+id/button_5"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButton5()}"
             android:text="@string/button5_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -148,7 +142,6 @@
         <Button
             android:id="@+id/button_6"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButton6()}"
             android:text="@string/button6_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -164,7 +157,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="1dp"
-            android:onClick="@{() -> viewmodel.onPushButton7()}"
             android:text="@string/button7_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -177,7 +169,6 @@
         <Button
             android:id="@+id/button_8"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButton8()}"
             android:text="@string/button8_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -190,7 +181,6 @@
         <Button
             android:id="@+id/button_9"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButton9()}"
             android:text="@string/button9_text"
             android:textColor="@color/purple_100"
             app:backgroundTint="@null"
@@ -207,7 +197,6 @@
             android:layout_height="0dp"
             android:layout_marginStart="1dp"
             android:background="@color/Grey_200"
-            android:onClick="@{() -> viewmodel.onPushButtonClear()}"
             android:text="@string/buttonClear_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_7"
@@ -223,7 +212,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/Grey_200"
-            android:onClick="@{() -> viewmodel.onPushButtonDelete()}"
             android:text="@string/buttonDelete_text"
             android:textSize="15sp"
             app:backgroundTint="@null"
@@ -236,7 +224,6 @@
         <Button
             android:id="@+id/button_point"
             style="@style/calculator_button"
-            android:onClick="@{() -> viewmodel.onPushButtonPeriod()}"
             android:text="@string/buttonPoint_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -250,7 +237,6 @@
             style="@style/calculator_button"
             android:layout_marginEnd="1dp"
             android:background="@color/Grey_200"
-            android:onClick="@{() -> viewmodel.onPushButtonAdd()}"
             android:text="@string/buttonAdd_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_equal"
@@ -264,7 +250,6 @@
             style="@style/calculator_button"
             android:layout_marginEnd="1dp"
             android:background="@color/Grey_200"
-            android:onClick="@{() -> viewmodel.onPushButtonSubtract()}"
             android:text="@string/buttonSubtract_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_add"
@@ -279,7 +264,6 @@
             android:layout_width="0dp"
             android:layout_marginEnd="1dp"
             android:background="@color/Grey_200"
-            android:onClick="@{() -> viewmodel.onPushButtonMultiply()}"
             android:text="@string/buttonMultiply_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_subtract"
@@ -295,7 +279,6 @@
             android:layout_height="0dp"
             android:layout_marginEnd="1dp"
             android:background="@color/Grey_200"
-            android:onClick="@{() -> viewmodel.onPushButtonDivide()}"
             android:text="@string/buttonDivide_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_multiply"
@@ -310,7 +293,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/Grey_200"
-            android:onClick="@{() -> viewmodel.onPushButtonPercent()}"
             android:text="@string/buttonPercent_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/button_9"
@@ -325,7 +307,6 @@
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="1dp"
             android:background="@color/purple_100"
-            android:onClick="@{() -> viewmodel.onPushButtonEquals()}"
             android:text="@string/buttonEqual_text"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
