--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="numBtn_height">64dp</dimen>
     <dimen name="button_textSize">25sp</dimen>>
+    <dimen name="Abutton_textSize">15sp</dimen>
 </resources>
