finished connecting database to viewmodel, now need to focus on having hosting views for data before connecting different queries.

--- a/app/src/main/res/layout/fragment_interface.xml
+++ b/app/src/main/res/layout/fragment_interface.xml
@@ -24,6 +24,8 @@
             android:paddingRight="15dp"
             android:background="@color/obsidian_100"
             android:textColor="@color/seclusive_white"
+            app:stackFromEnd="true"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/operation_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
