--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="numBtn_height">64dp</dimen>
     <dimen name="button_textSize">25sp</dimen>>
     <dimen name="Abutton_textSize">15sp</dimen>
+    <dimen name="history_fragment_header">30sp</dimen>
 </resources>
