--- a/app/src/main/res/layout/interface_recents_holder.xml
+++ b/app/src/main/res/layout/interface_recents_holder.xml
@@ -3,18 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/Grey_200"
+    android:layout_marginTop="2dp">
 
     <TextView
         android:id="@+id/txt_recent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:padding="6dp"
         android:gravity="end"
+        android:padding="6dp"
         android:text="@string/textview"
+        android:textColor="@color/seclusive_white"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/add_query_button"
+        android:src="@drawable/ic_add_query_button"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:background="@color/Grey_200"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
